# reddit-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
doc/: PLAN.md  PROGRESS.md
doc/phases/: PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  PHASE6.md  PHASE7.md
npm/: README.md  install.js  package.json
src/: error.rs  main.rs
src/api/: auth.rs  client.rs  mod.rs  ratelimit.rs
src/api/endpoints/: account.rs  collection.rs  comment.rs  flair.rs  follow.rs  link.rs  listing.rs  live.rs  message.rs  mod.rs  moderation.rs  modmail.rs  modnote.rs  multi.rs  save.rs  search.rs  submit.rs  subreddit.rs  subscribe.rs  user.rs  vote.rs  wiki.rs
src/cache/: mod.rs  token.rs
src/cli/: mod.rs  root.rs
src/config/: settings.rs
src/models/: comment.rs  common.rs  link.rs  mod.rs  subreddit.rs  user.rs
src/output/: json.rs  mod.rs  table.rs
src/utils/: mod.rs
tests/: integration_test.rs
