[package]
name = "reddit-cli"
version = "0.1.0"
edition = "2024"
authors = ["0010capacity"]
description = "A powerful CLI client for Reddit API"
license = "MIT"
repository = "https://github.com/0010capacity/reddit-cli"
homepage = "https://github.com/0010capacity/reddit-cli"
readme = "README.md"
keywords = ["reddit", "cli", "api", "client"]
categories = ["command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"
toml = "0.8"
dirs = "5"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2"

# OAuth2
oauth2 = "4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
serial_test = "3"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# Binary size optimization for release
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
